add NPM, watchify, uglify, other fy

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.19/gmaps.js"></script>
 
   <script src='http://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js'></script>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js'></script>
-  <script type='text/jsx' src='app.jsx'></script>
+  <script src='compiled.js'></script>
 </body>
 
 </html>
