--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
   <script src="https://maps.googleapis.com/maps/api/js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.19/gmaps.js"></script>
-
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js'></script>
-  <script src='compiled.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js'></script>
+  <script src='dist/all.js'></script>
 </body>
 
 </html>
