refactor code into separate component files

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
   <script src="https://maps.googleapis.com/maps/api/js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.19/gmaps.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js'></script>
-  <script src='dist/all.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js'></script>
+  <script src='src/header.jsx' type='text/jsx'></script>
+  <script src='src/footer.jsx' type='text/jsx'></script>
+  <script src='src/search.jsx' type='text/jsx'></script>
+  <script src='src/map.jsx' type='text/jsx'></script>
+  <script src='src/locations.jsx' type='text/jsx'></script>
+  <script src='src/app.jsx' type='text/jsx'></script>
 </body>
 
 </html>
