convert GMaps plugin to google api

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div id='root'></div>
   <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-  <script src="https://maps.googleapis.com/maps/api/js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.19/gmaps.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAu0XIuAG4rz3xHnKxU8fNamfvTHQUYxOU&libraries=places"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.19/gmaps.js"></script> -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js'></script>
   <script src='src/header.jsx' type='text/jsx'></script>
